--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -36,5 +36,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install Appium
+      run: npm install -g appium
+    - name: Start Appium Server
+      run: |
+        appium &
+        sleep 5
+    - name: Connect to Physical Device
+      run: appium --port 4723
     - name: Run Test and create report
       run: python -m robot -d reports -x junit-report.xml "Tests/prp-test-01.robot"
