--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -40,9 +40,9 @@ jobs:
       run: npm install -g appium
     - name: Start Appium Server
       run: |
-        appium &
+        appium --port 4724 &
         sleep 5
     - name: Connect to Physical Device
-      run: appium --port 4724
+      run: appium
     - name: Run Test and create report
       run: python -m robot -d reports -x junit-report.xml "Tests/prp-test-01.robot"
