--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -42,7 +42,7 @@ jobs:
       run: appium driver install uiautomator2
     - name: Start Appium Server
       run: |
-        appium --port 4724 &
+        appium --address 192.168.178.32 --port 4724 &
         sleep 5
     - name: Run Test and create report
       run: python -m robot -d reports -x junit-report.xml "Tests/prp-test-01.robot"
