--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -44,5 +44,8 @@ jobs:
       run: |
         appium --address 192.168.178.32 --port 4724 &
         sleep 5
+    - name: Check Connection
+      run: |
+        telnet 192.168.178.32 4724
     - name: Run Test and create report
       run: python -m robot -d reports -x junit-report.xml "Tests/prp-test-01.robot"
