--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -43,7 +43,7 @@ jobs:
       run: appium driver install uiautomator2
     - name: Start Appium Server
       run: |
-        appium --address 0.0.0.0 --port 4724 --relaxed-security --base-path /wd/hub &
+        appium --address 0.0.0.0 --port 4724 &
         sleep 30
     - name: Run Test and create report
       run: robot -d Output --loglevel TRACE  Tests/prp-test-01.robot
