--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pvd
+        pwd
         ls -a
         python -m pip install --upgrade pip
         pip install Appium-Python-Client
