--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -39,9 +39,9 @@ jobs:
       run: appium driver install uiautomator2
     - name: Run Test and create report
       run: |
-        HTTP_DEVICE:  ${{ secrets.HTTP_DEVICE }} robot -d Output --loglevel TRACE  Tests/Login.robot
+        HTTP_DEVICE="${{ secrets.HTTP_DEVICE }}" robot -d Output --loglevel TRACE  Tests/Login.robot
       env:
-        HTTP_DEVICE:  ${{ secrets.HTTP_DEVICE }}
+        HTTP_DEVICE: ${{ secrets.HTTP_DEVICE }}
       
     - name: Archive Test Results
       uses: actions/upload-artifact@v2
