--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -37,11 +37,15 @@ jobs:
       run: npm install -g appium
     - name: Install UiAutomator2 Driver
       run: appium driver install uiautomator2
+    - name: Set HTTP_DEVICE
+      run: echo "HTTP_DEVICE=${{ secrets.HTTP_DEVICE }}" >> $GITHUB_ENV
+
     - name: Run Test and create report
       run: |
-        HTTP_DEVICE="${{ secrets.HTTP_DEVICE }}" robot -d Output --loglevel TRACE  Tests/Login.robot
+        robot -d Output --loglevel TRACE  Tests/Login.robot
       env:
         HTTP_DEVICE: ${{ secrets.HTTP_DEVICE }}
+
       
     - name: Archive Test Results
       uses: actions/upload-artifact@v2
