--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -26,11 +26,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pwd
-        ls -a
         python -m pip install --upgrade pip
         pip install Appium-Python-Client
         pip install robotframework
+        pip install PyYAML
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install Appium
