--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -41,10 +41,8 @@ jobs:
 
     - name: Run Test and create report
       run: |
-        robot -d Output --loglevel TRACE  Tests/Login.robot
-      env:
-        HTTP_DEVICE: ${{ secrets.HTTP_DEVICE }}
-
+        ${{ env.HTTP_DEVICE }}  robot -d Output --loglevel TRACE  Tests/Login.robot
+    
       
     - name: Archive Test Results
       uses: actions/upload-artifact@v2
