--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -30,7 +30,8 @@ jobs:
         pip install Appium-Python-Client
         pip install robotframework
         pip install PyYAML
-        python -m pip install flake8 pytest
+        adb uninstall io.appium.uiautomator2.server
+        adb uninstall io.appium.uiautomator2.server.test
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install Appium
       run: npm install -g appium
