--- a/.github/workflows/postman-ci.yml
+++ b/.github/workflows/postman-ci.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '14'
     - name: Run Postman Test
       run: |
-        npm install -g newman
+        npm install -g newman@5.2.4
         newman run https://api.postman.com/collections/29547778-2945e5f1-8380-4fda-a483-e85b6b34a11f?access_key=PMAT-01HKM3Z6T1W78P2Y79525Q96AC
       env:
         POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}  # You can use environment variables for any required secrets
